--- a/.github/workflows/swa-deploy.yml
+++ b/.github/workflows/swa-deploy.yml
@@ -14,6 +14,10 @@ jobs:
       - name: Setup Bun
         run: |
           curl -fsSL https://bun.sh/install | bash
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH
+
+      - name: Install and Build
+        run:
           bun install
           bun run build
 
