--- a/.github/workflows/swa-deploy.yml
+++ b/.github/workflows/swa-deploy.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Use Node.js 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - name: Setup Bun
         run: |
           curl -fsSL https://bun.sh/install | bash
