--- a/.github/workflows/swa-deploy.yml
+++ b/.github/workflows/swa-deploy.yml
@@ -11,19 +11,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 20
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
       - name: Setup Bun
         run: |
           curl -fsSL https://bun.sh/install | bash
           echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
-      - name: Install and Build
+      - name: Install dependencies with Bun
         run:
           bun install
+      
+      - name: Build the project
+        run: |
           bun run build
 
       - name: Deploy to Azure Static Web Apps
