Updated to include meta information for bot scanning

--- a/.github/workflows/swa-deploy.yml
+++ b/.github/workflows/swa-deploy.yml
@@ -20,6 +20,9 @@ jobs:
         run:
           bun install
       
+      - name: Create .env.production file
+        run: echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" > .env.production
+      
       - name: Build the project
         run: |
           bun run build
